[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/art/level/tile248.png" type="Texture" id=1]
[ext_resource path="res://assets/colored_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://objects/player/PlayerTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/interface/MainMenuUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/monochrome_transparent_packed.png" type="Texture" id=6]
[ext_resource path="res://objects/player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/level/game_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://objects/interface/tutorial/TutorialProximityText.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/camera/CameraFollower.gd" type="Script" id=11]
[ext_resource path="res://objects/enemies/MiniFire.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/trees/BaseTree.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/enemies/FireSpawner.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="CircleShape2D" id=6]
radius = 177.405

[sub_resource type="Animation" id=7]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 5 )
player_scene = ExtResource( 7 )
tree = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -206.933, 336.268 )
scale = Vector2( 64, 64 )
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 288, 96, 16, 16 )

[node name="BackgroundTileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 31
format = 1
tile_data = PoolIntArray( 1179680, 12, 0, 1179681, 12, 0, 1179682, 12, 0, 1245216, 12, 0, 1245217, 12, 0, 1245218, 12, 0, 1245239, 12, 0, 1245240, 12, 0, 1245241, 12, 0, 1245242, 12, 0, 1245243, 12, 0, 1245244, 12, 0, 1245245, 12, 0, 1245246, 12, 0, 1245247, 12, 0, 1245248, 12, 0, 1245249, 12, 0, 1245250, 12, 0, 1245251, 12, 0, 1245252, 12, 0, 1245253, 12, 0, 1310752, 12, 0, 1310753, 12, 0, 1310754, 12, 0, 1310774, 12, 0, 1310775, 12, 0, 1310776, 12, 0, 1310777, 12, 0, 1310778, 12, 0, 1310779, 12, 0, 1310780, 12, 0, 1310781, 12, 0, 1310782, 12, 0, 1310783, 12, 0, 1310784, 12, 0, 1310785, 12, 0, 1310786, 12, 0, 1310787, 12, 0, 1310788, 12, 0, 1310789, 12, 0, 1310790, 12, 0, 1376256, 12, 0, 1376257, 12, 0, 1376258, 12, 0, 1376259, 12, 0, 1376260, 12, 0, 1376261, 12, 0, 1376262, 12, 0, 1376263, 12, 0, 1376264, 12, 0, 1376265, 12, 0, 1376266, 12, 0, 1376267, 12, 0, 1376268, 12, 0, 1376269, 12, 0, 1376270, 12, 0, 1376271, 12, 0, 1376272, 12, 0, 1376273, 12, 0, 1376274, 12, 0, 1376275, 12, 0, 1376276, 12, 0, 1376277, 12, 0, 1376278, 12, 0, 1376279, 12, 0, 1376280, 12, 0, 1376281, 12, 0, 1376282, 12, 0, 1376283, 12, 0, 1376284, 12, 0, 1376285, 12, 0, 1376286, 12, 0, 1376287, 12, 0, 1376288, 12, 0, 1376289, 12, 0, 1376290, 12, 0, 1376291, 12, 0, 1376292, 12, 0, 1376293, 12, 0, 1376294, 12, 0, 1376295, 12, 0, 1376296, 12, 0, 1376297, 12, 0, 1376298, 12, 0, 1376299, 12, 0, 1376300, 12, 0, 1376301, 12, 0, 1376302, 12, 0, 1376303, 12, 0, 1376304, 12, 0, 1376305, 12, 0, 1376306, 12, 0, 1376307, 12, 0, 1376308, 12, 0, 1376309, 12, 0, 1376310, 12, 0, 1376311, 12, 0, 1376312, 12, 0, 1376313, 12, 0, 1376314, 12, 0, 1376315, 12, 0, 1376316, 12, 0, 1376317, 12, 0, 1376318, 12, 0, 1376319, 12, 0, 1376320, 12, 0, 1376321, 12, 0, 1376322, 12, 0, 1376323, 12, 0, 1376324, 12, 0, 1376325, 12, 0, 1376326, 12, 0, 1376327, 12, 0, 1376328, 12, 0, 1376329, 12, 0, 1376330, 12, 0, 1376331, 12, 0, 1376332, 12, 0, 1376333, 12, 0, 1441792, 12, 0, 1441793, 12, 0, 1441794, 12, 0, 1441795, 12, 0, 1441796, 12, 0, 1441797, 12, 0, 1441798, 12, 0, 1441799, 12, 0, 1441800, 12, 0, 1441801, 12, 0, 1441802, 12, 0, 1441803, 12, 0, 1441804, 12, 0, 1441805, 12, 0, 1441806, 12, 0, 1441807, 12, 0, 1441808, 12, 0, 1441809, 12, 0, 1441810, 12, 0, 1441811, 12, 0, 1441812, 12, 0, 1441813, 12, 0, 1441814, 12, 0, 1441815, 12, 0, 1441816, 12, 0, 1441817, 12, 0, 1441818, 12, 0, 1441819, 12, 0, 1441820, 12, 0, 1441821, 12, 0, 1441822, 12, 0, 1441823, 12, 0, 1441824, 12, 0, 1441825, 12, 0, 1441826, 12, 0, 1441827, 12, 0, 1441828, 12, 0, 1441829, 12, 0, 1441830, 12, 0, 1441831, 12, 0, 1441832, 12, 0, 1441833, 12, 0, 1441834, 12, 0, 1441835, 12, 0, 1441836, 12, 0, 1441837, 12, 0, 1441838, 12, 0, 1441839, 12, 0, 1441840, 12, 0, 1441841, 12, 0, 1441842, 12, 0, 1441843, 12, 0, 1441844, 12, 0, 1441845, 12, 0, 1441846, 12, 0, 1441847, 12, 0, 1441848, 12, 0, 1441849, 12, 0, 1441850, 12, 0, 1441851, 12, 0, 1441852, 12, 0, 1441853, 12, 0, 1441854, 12, 0, 1441855, 12, 0, 1441856, 12, 0, 1441857, 12, 0, 1441858, 12, 0, 1441859, 12, 0, 1441860, 12, 0, 1441861, 12, 0, 1441862, 12, 0, 1441863, 12, 0, 1441864, 12, 0, 1441865, 12, 0, 1441866, 12, 0, 1441867, 12, 0, 1441868, 12, 0, 1441869, 12, 0, 1507328, 12, 0, 1507329, 12, 0, 1507330, 12, 0, 1507331, 12, 0, 1507332, 12, 0, 1507333, 12, 0, 1507334, 12, 0, 1507335, 12, 0, 1507336, 12, 0, 1507337, 12, 0, 1507338, 12, 0, 1507339, 12, 0, 1507340, 12, 0, 1507341, 12, 0, 1507342, 12, 0, 1507343, 12, 0, 1507344, 12, 0, 1507345, 12, 0, 1507346, 12, 0, 1507347, 12, 0, 1507348, 12, 0, 1507349, 12, 0, 1507350, 12, 0, 1507351, 12, 0, 1507352, 12, 0, 1507353, 12, 0, 1507354, 12, 0, 1507355, 12, 0, 1507356, 12, 0, 1507357, 12, 0, 1507358, 12, 0, 1507359, 12, 0, 1507360, 12, 0, 1507361, 12, 0, 1507362, 12, 0, 1507363, 12, 0, 1507364, 12, 0, 1507365, 12, 0, 1507366, 12, 0, 1507367, 12, 0, 1507368, 12, 0, 1507369, 12, 0, 1507370, 12, 0, 1507371, 12, 0, 1507372, 12, 0, 1507373, 12, 0, 1507374, 12, 0, 1507375, 12, 0, 1507376, 12, 0, 1507377, 12, 0, 1507378, 12, 0, 1507379, 12, 0, 1507380, 12, 0, 1507381, 12, 0, 1507382, 12, 0, 1507383, 12, 0, 1507384, 12, 0, 1507385, 12, 0, 1507386, 12, 0, 1507387, 12, 0, 1507388, 12, 0, 1507389, 12, 0, 1507390, 12, 0, 1507391, 12, 0, 1507392, 12, 0, 1507393, 12, 0, 1507394, 12, 0, 1507395, 12, 0, 1507396, 12, 0, 1507397, 12, 0, 1507398, 12, 0, 1507399, 12, 0, 1507400, 12, 0, 1507401, 12, 0, 1507402, 12, 0, 1507403, 12, 0, 1507404, 12, 0, 1507405, 12, 0, 1572864, 12, 0, 1572865, 12, 0, 1572866, 12, 0, 1572867, 12, 0, 1572868, 12, 0, 1572869, 12, 0, 1572870, 12, 0, 1572871, 12, 0, 1572872, 12, 0, 1572873, 12, 0, 1572874, 12, 0, 1572875, 12, 0, 1572876, 12, 0, 1572877, 12, 0, 1572878, 12, 0, 1572879, 12, 0, 1572880, 12, 0, 1572881, 12, 0, 1572882, 12, 0, 1572883, 12, 0, 1572884, 12, 0, 1572885, 12, 0, 1572886, 12, 0, 1572887, 12, 0, 1572888, 12, 0, 1572889, 12, 0, 1572890, 12, 0, 1572891, 12, 0, 1572892, 12, 0, 1572893, 12, 0, 1572894, 12, 0, 1572895, 12, 0, 1572896, 12, 0, 1572897, 12, 0, 1572898, 12, 0, 1572899, 12, 0, 1572900, 12, 0, 1572901, 12, 0, 1572902, 12, 0, 1572903, 12, 0, 1572904, 12, 0, 1572905, 12, 0, 1572906, 12, 0, 1572907, 12, 0, 1572908, 12, 0, 1572909, 12, 0, 1572910, 12, 0, 1572911, 12, 0, 1572912, 12, 0, 1572913, 12, 0, 1572914, 12, 0, 1572915, 12, 0, 1572916, 12, 0, 1572917, 12, 0, 1572918, 12, 0, 1572919, 12, 0, 1572920, 12, 0, 1572921, 12, 0, 1572922, 12, 0, 1572923, 12, 0, 1572924, 12, 0, 1572925, 12, 0, 1572926, 12, 0, 1572927, 12, 0, 1572928, 12, 0, 1572929, 12, 0, 1572930, 12, 0, 1572931, 12, 0, 1572932, 12, 0, 1572933, 12, 0, 1572934, 12, 0, 1572935, 12, 0, 1572936, 12, 0, 1572937, 12, 0, 1572938, 12, 0, 1572939, 12, 0, 1572940, 12, 0, 1572941, 12, 0 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_use_kinematic = true
collision_mask = 15
format = 1
tile_data = PoolIntArray( 1179680, 3, 0, 1179681, 3, 0, 1179682, 3, 0, 1245238, 4, 0, 1245239, 5, 0, 1245240, 5, 0, 1245241, 5, 0, 1245242, 5, 0, 1245243, 5, 0, 1245244, 5, 0, 1245245, 5, 0, 1245246, 5, 0, 1245247, 5, 0, 1245248, 5, 0, 1245249, 5, 0, 1245250, 5, 0, 1245251, 5, 0, 1245252, 5, 0, 1245253, 5, 0, 1245254, -1610612732, 0, 1310773, 4, 0, 1310791, -1610612732, 0, 1376256, 5, 0, 1376257, 5, 0, 1376258, 5, 0, 1376259, 5, 0, 1376260, 5, 0, 1376261, 5, 0, 1376262, 5, 0, 1376263, 5, 0, 1376264, 5, 0, 1376265, 5, 0, 1376266, 5, 0, 1376267, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 5, 0, 1376271, 5, 0, 1376272, 5, 0, 1376273, 5, 0, 1376274, 5, 0, 1376275, 5, 0, 1376276, 5, 0, 1376277, 5, 0, 1376278, 5, 0, 1376279, 5, 0, 1376280, 5, 0, 1376281, 5, 0, 1376282, 5, 0, 1376283, 5, 0, 1376284, 5, 0, 1376285, 5, 0, 1376286, 5, 0, 1376287, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1376294, 5, 0, 1376295, 5, 0, 1376296, 5, 0, 1376297, 5, 0, 1376298, 5, 0, 1376299, 5, 0, 1376300, 5, 0, 1376301, 5, 0, 1376302, 5, 0, 1376303, 5, 0, 1376304, 5, 0, 1376305, 5, 0, 1376306, 5, 0, 1376307, 5, 0, 1376308, 5, 0, 1376309, 5, 0, 1376310, 5, 0, 1376311, 5, 0, 1376312, 5, 0, 1376313, 5, 0, 1376314, 5, 0, 1376315, 5, 0, 1376316, 5, 0, 1376317, 5, 0, 1376318, 5, 0, 1376319, 5, 0, 1376320, 5, 0, 1376321, 5, 0, 1376322, 5, 0, 1376323, 5, 0, 1376324, 5, 0, 1376325, 5, 0, 1376326, 5, 0, 1376327, 5, 0, 1376328, 5, 0, 1376329, 5, 0, 1376330, 5, 0, 1376331, 5, 0, 1376332, 5, 0, 1376333, 5, 0 )

[node name="PlayerTree" parent="." instance=ExtResource( 3 )]
position = Vector2( 532.923, 547.017 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
light_mask = -2147483585
position = Vector2( 680.226, 401.952 )
scale = Vector2( 86.0283, 51.244 )
z_index = -5
texture = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="WaterLevel2" type="ColorRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.49832
margin_right = -1.49829
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
layer = -5

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.1, 0.1 )

[node name="Cloud" type="Node2D" parent="Background/ParallaxBackground/ParallaxLayer"]

[node name="Sprite2" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer/Cloud"]
position = Vector2( 484.814, 266.787 )
rotation = 1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer/Cloud"]
position = Vector2( 450.108, 260.113 )
rotation = -1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Cloud2" type="Node2D" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2( 370.812, -72.0435 )

[node name="Sprite2" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer/Cloud2"]
position = Vector2( 484.814, 266.787 )
rotation = 1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer/Cloud2"]
position = Vector2( 450.108, 260.113 )
rotation = -1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
visible = false
motion_scale = Vector2( 2, 2 )

[node name="Cloud" type="Node2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 661.105, 73.1029 )

[node name="Sprite2" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2/Cloud"]
position = Vector2( -14.8325, 6.35677 )
rotation = 1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2/Cloud"]
rotation = -1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Cloud2" type="Node2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 776.586, 337.969 )

[node name="Sprite2" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2/Cloud2"]
position = Vector2( -14.8325, 6.35677 )
rotation = 1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2/Cloud2"]
rotation = -1.5708
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="MainMenuUI" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 310.131, 645.827 )

[node name="CameraFollower" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="CameraFollower"]
current = true
limit_left = -10
limit_top = -10
limit_bottom = 778
smoothing_enabled = true
smoothing_speed = 10.0

[node name="TutorialTexts" type="Node2D" parent="."]

[node name="TutorialProximityText" parent="TutorialTexts" instance=ExtResource( 10 )]
position = Vector2( 2001.47, 458.696 )
trigger_on_player_tree_enter = false
trigger_on_player_tree_exit = false

[node name="Label" parent="TutorialTexts/TutorialProximityText" index="1"]
custom_fonts/font = SubResource( 5 )
text = "Press [E] to fly and land the tree"

[node name="TutorialProximityText2" parent="TutorialTexts" instance=ExtResource( 10 )]
position = Vector2( 307.938, 571.376 )
trigger_on_player_tree_enter = false
trigger_on_player_tree_exit = false

[node name="CollisionShape2D" parent="TutorialTexts/TutorialProximityText2" index="0"]
shape = SubResource( 6 )

[node name="Label" parent="TutorialTexts/TutorialProximityText2" index="1"]
custom_fonts/font = SubResource( 5 )
text = "[A] [D] to move"

[node name="AnimationPlayer" parent="TutorialTexts/TutorialProximityText2" index="2"]
anims/hide = SubResource( 7 )
anims/show = SubResource( 8 )

[node name="TutorialProximityText3" parent="TutorialTexts" instance=ExtResource( 10 )]
position = Vector2( 893.038, 627.496 )
trigger_on_player_tree_enter = false
trigger_on_player_tree_exit = false

[node name="CollisionShape2D" parent="TutorialTexts/TutorialProximityText3" index="0"]
shape = SubResource( 6 )

[node name="Label" parent="TutorialTexts/TutorialProximityText3" index="1"]
custom_fonts/font = SubResource( 5 )
text = "[SPACE] to jump"

[node name="AnimationPlayer" parent="TutorialTexts/TutorialProximityText3" index="2"]
anims/hide = SubResource( 9 )
anims/show = SubResource( 10 )

[node name="Level" type="Node" parent="."]

[node name="MiniFire" parent="Level" instance=ExtResource( 12 )]
position = Vector2( 1291.62, 470.902 )

[node name="FireSpawner" parent="." instance=ExtResource( 14 )]
position = Vector2( 1557.29, 427.631 )
spawn_scene = ExtResource( 12 )
[connection signal="tree_landed" from="PlayerTree" to="." method="_on_PlayerTree_tree_landed"]
[connection signal="tree_launched" from="PlayerTree" to="." method="_on_PlayerTree_tree_launched"]

[editable path="TutorialTexts/TutorialProximityText"]

[editable path="TutorialTexts/TutorialProximityText2"]

[editable path="TutorialTexts/TutorialProximityText3"]
